1.1.30
	+ Added support for all missing netmasks between /16 and /32
	+ Added support for search domain in /etc/resolv.conf
	+ Use ICMP for traceroute diagnosis
1.1
	+ Added traceroute on network diagnosis
	+ Use new rows() and ids() API
	+ Bugfix: ebox-netcfg-import uses model API to import default gateway
	+ Support for dyndns
	+ Gateway models does not use longet custom views
	+ Gateway rules table now use services
0.12.99
	+ New release
0.12
	+ Use new EBox::Model::Row api
	+ Add help to model fields
	+ Remove default option auotmatically if another router is set as default
0.11.102
	+ Bugfix: Static routes are deleted from ip when they are not
	useful
	+ Bugfix: Fixing wrong href in multigateway rules page
0.11.101
	+ Static routes become a model with three methods exposed
	+ Remove usage of a deprecated method in NetWrappers
	+ DNS resolvers become  a model with three methods exposed. Now
	you may add as many DNS resolvers you want
	+ Use separator ':' in exposed method using '/' for addresses
O.11.100
	+ Disable network traffic monitor due to a bug in perl and RRDs module
	+ Use /etc/network/interfaces and not /var/lib/ebox/tmp/interfaces
	+ Run saveConfig() after importing network configuration and not save()
	  which forced a restart of the interfaces stored 
	  in /etc/network/interfaces at package installation time
	+ Add default gateway to /etc/network/interfaces 
0.11.99
	+ Added traffic rate monitoring done on demand and in
	real-time. The monitoring may be filter by source address and
	service (protocol/port).
0.11
	+ move helper scripts to data dir (applied Soren's patch)
	+ Bugfix: Change from static to other method works again
0.10.99
	+ New release
0.10
	+ Remove all interfaces from /etc/network/interfaces but lo
	  after importing network configuration
0.9.100
	+ Fixing bug with static routes which prevented them from working
	  if the multigateway support was enabled
	+ Fixing bug importing gateway IP addresses from network
	  configuration