@@ -18,7 +18,7 @@ ebox-network (0.12.99) hardy; urgency=low
 
 ebox-network (0.11.101) hardy; urgency=low
 
-  * New upstream realese
+  * New upstream release
 
  -- Javier Uruen Val <javi@warp.es>  Sun, 01 Jun 2008 17:25:05 +0200
 
