@@ -1,6 +1,8 @@
 1.1.30
 	+ Added support for all missing netmasks between /16 and /32
 	+ Added support for search domain in /etc/resolv.conf
+	+ Use a template to write down /etc/resolv.conf to allow easier
+  	user modifications
 	+ Use ICMP for traceroute diagnosis
 1.1
 	+ Added traceroute on network diagnosis
